services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: browserless
  name: browserless
  namespace: changedetect
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: browserless
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: changedetection-io
  name: changedetection-io
  namespace: changedetect
spec:
  type: ClusterIP
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: changedetection-io
