ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetector-io
  namespace: changedetect
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: change.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection-io
                port:
                  number: 5000
  tls:
    - hosts:
        - hostname.net
      secretName: tls-ikapi-ingress
